# Joueur.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  echo.js  makefile  run
.creer/: functions.noCreer
.creer/src/games/${underscore(game_name)}/: ${underscore(obj_key)}.rs  ai.rs  castable.rs  mod.rs
.creer/src/games/${underscore(game_name)}/impl/: ${underscore(obj_key)}_impl.rs  ${underscore(obj_key)}_ref.rs  delta_merge.rs  game_manager_impl.rs  mod.rs
src/: main.rs
src/base/: ai.rs  game.rs  game_manager.rs  mod.rs  namespace.rs
src/games/: mod.rs
src/games/chess/: ai.rs  game.rs  game_object.rs  mod.rs  player.rs
src/games/chess/impl/: game_impl.rs  game_manager_impl.rs  mod.rs  namespace_impl.rs  player_impl.rs
src/joueur/: client.rs  client_events.rs  color.rs  errors.rs  game_manager.rs  mod.rs  run.rs
