[package]
name = "joueur"
edition = "2018"
version = "0.1.0"
authors = [
    "Jacob Fischer <jacob.t.fischer@gmail.com>",
    "Russley Shaw <russleyshaw@gmail.com>",
]

[dependencies]
backtrace = "0.3.42"
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
termcolor = "1.1"
